Xernial cleric april final (#6124)