@@ -5,6 +5,7 @@ import com.playmonumenta.plugins.abilities.Ability;
 import com.playmonumenta.plugins.abilities.AbilityInfo;
 import com.playmonumenta.plugins.abilities.AbilityTrigger;
 import com.playmonumenta.plugins.abilities.AbilityTriggerInfo;
+import com.playmonumenta.plugins.abilities.AbilityWithDuration;
 import com.playmonumenta.plugins.abilities.Description;
 import com.playmonumenta.plugins.abilities.FormattedDescriptionBuilder;
 import com.playmonumenta.plugins.abilities.cleric.Crusade;
@@ -16,6 +17,8 @@ import com.playmonumenta.plugins.cosmetics.skills.cleric.paladin.HolyJavelinCS;
 import com.playmonumenta.plugins.events.DamageEvent;
 import com.playmonumenta.plugins.events.DamageEvent.DamageType;
 import com.playmonumenta.plugins.itemstats.abilities.CharmManager;
+import com.playmonumenta.plugins.network.ClientModHandler;
+import com.playmonumenta.plugins.utils.AbilityUtils;
 import com.playmonumenta.plugins.utils.DamageUtils;
 import com.playmonumenta.plugins.utils.EntityUtils;
 import com.playmonumenta.plugins.utils.Hitbox;
@@ -36,18 +39,22 @@ import org.bukkit.util.Vector;
 import org.jetbrains.annotations.Nullable;
 
 import static com.playmonumenta.plugins.abilities.FormattedDescriptionBuilder.StatValue.cooldown;
+import static com.playmonumenta.plugins.abilities.FormattedDescriptionBuilder.StatValue.perRegion;
 import static com.playmonumenta.plugins.abilities.FormattedDescriptionBuilder.StatValue.stat;
 import static com.playmonumenta.plugins.utils.DescriptionUtils.UNDERLINED;
 
 
-public class HolyJavelin extends Ability {
-	private static final int RANGE_1 = 12;
-	private static final int RANGE_2 = 16;
+public class HolyJavelin extends Ability implements AbilityWithDuration {
+	private static final int RANGE = 12;
 	private static final double SIZE = 0.95;
-	private static final int DAMAGE = 12;
-	private static final int HERETIC_DAMAGE = 24;
+	private static final double[] DAMAGE_1 = {10, 13};
+	private static final double[] DAMAGE_2 = {12, 16};
+	private static final double[] HERETIC_DAMAGE_1 = {20, 26};
+	private static final double[] HERETIC_DAMAGE_2 = {24, 32};
 	private static final int FIRE_DURATION = 5 * 20;
-	private static final float VELOCIY_MULTIPLIER = 1.15f;
+	private static final float VELOCITY_MULTIPLIER = 1.15f;
+	private static final double DIVINE_JUSTICE_BONUS_DAMAGE = 0.6;
+	private static final int DIVINE_JUSTICE_BONUS_PRIME_DURATION = 3 * 20;
 	private static final int COOLDOWN_1 = 9 * 20;
 	private static final int COOLDOWN_2 = 8 * 20;
 
@@ -55,6 +62,8 @@ public class HolyJavelin extends Ability {
 	public static final String CHARM_COOLDOWN = "Holy Javelin Cooldown";
 	public static final String CHARM_RANGE = "Holy Javelin Range";
 	public static final String CHARM_SIZE = "Holy Javelin Size";
+	public static final String CHARM_DJ_DAMAGE = "Holy Javelin Divine Justice Damage Bonus";
+	public static final String CHARM_DJ_PRIME = "Holy Javelin Divine Justice Prime Duration";
 	public static final String CHARM_VELOCITY = "Holy Javelin Velocity";
 
 	public static final AbilityInfo<HolyJavelin> INFO =
@@ -76,7 +85,11 @@ public class HolyJavelin extends Ability {
 	private final double mRange;
 	private final double mSize;
 	private final float mVelocity;
+	private final double mDJDamageBonus;
+	private final int mInitialPrimeDuration;
 
+	private int mRemainingPrimeDuration = 0;
+	private @Nullable BukkitRunnable mPrimeRunnable = null;
 	private @Nullable DivineJustice mDivineJustice;
 	private boolean mDisableMobility = false;
 
@@ -84,11 +97,13 @@ public class HolyJavelin extends Ability {
 
 	public HolyJavelin(Plugin plugin, Player player) {
 		super(plugin, player, INFO);
-		mDamage = CharmManager.calculateFlatAndPercentValue(player, CHARM_DAMAGE, DAMAGE);
-		mHereticDamage = CharmManager.calculateFlatAndPercentValue(player, CHARM_DAMAGE, HERETIC_DAMAGE);
-		mRange = CharmManager.getRadius(mPlayer, CHARM_RANGE, isLevelOne() ? RANGE_1 : RANGE_2);
+		mDamage = CharmManager.calculateFlatAndPercentValue(player, CHARM_DAMAGE, AbilityUtils.getRegionScaled(player, isLevelOne() ? DAMAGE_1 : DAMAGE_2));
+		mHereticDamage = CharmManager.calculateFlatAndPercentValue(player, CHARM_DAMAGE, AbilityUtils.getRegionScaled(player, isLevelOne() ? HERETIC_DAMAGE_1 : HERETIC_DAMAGE_2));
+		mRange = CharmManager.getRadius(mPlayer, CHARM_RANGE, RANGE);
 		mSize = CharmManager.getRadius(mPlayer, CHARM_SIZE, SIZE);
-		mVelocity = (float) CharmManager.calculateFlatAndPercentValue(player, CHARM_VELOCITY, VELOCIY_MULTIPLIER);
+		mVelocity = (float) CharmManager.calculateFlatAndPercentValue(player, CHARM_VELOCITY, VELOCITY_MULTIPLIER);
+		mDJDamageBonus = DIVINE_JUSTICE_BONUS_DAMAGE + CharmManager.getLevelPercentDecimal(player, CHARM_DJ_DAMAGE);
+		mInitialPrimeDuration = CharmManager.getDuration(player, CHARM_DJ_PRIME, DIVINE_JUSTICE_BONUS_PRIME_DURATION);
 
 		mCosmetic = CosmeticSkills.getPlayerCosmeticSkill(player, new HolyJavelinCS());
 		Bukkit.getScheduler().runTask(plugin, () ->
@@ -101,8 +116,15 @@ public class HolyJavelin extends Ability {
 
 	@Override
 	public boolean onDamage(DamageEvent event, LivingEntity enemy) {
+		if (getRemainingAbilityDuration() > 0 && event.getAbility() != null && event.getAbility() == ClassAbility.DIVINE_JUSTICE) {
+			event.updateDamageWithMultiplier(1 + mDJDamageBonus);
+			mRemainingPrimeDuration = 0;
+			ClientModHandler.updateAbility(mPlayer, ClassAbility.HOLY_JAVELIN);
+			return false;
+		}
+
 		if (event.getType() == DamageType.MELEE
-			&& mCustomTriggers.get(0).check(mPlayer, AbilityTrigger.Key.LEFT_CLICK)) {
+			&& mCustomTriggers.getFirst().check(mPlayer, AbilityTrigger.Key.LEFT_CLICK)) {
 			double sharedPassiveDamage = 0;
 			if (mDivineJustice != null && Crusade.enemyTriggersAbilities(enemy)) {
 				sharedPassiveDamage += mDivineJustice.calculateDamage(event, true);
@@ -144,6 +166,24 @@ public class HolyJavelin extends Ability {
 					}
 				}
 			}.runTaskTimer(Plugin.getInstance(), 0, 1);
+
+			mRemainingPrimeDuration = mInitialPrimeDuration;
+			if (mPrimeRunnable != null) {
+				ClientModHandler.updateAbility(mPlayer, ClassAbility.HOLY_JAVELIN);
+				mPrimeRunnable.cancel();
+			}
+			mPrimeRunnable = new BukkitRunnable() {
+				@Override
+				public void run() {
+					mRemainingPrimeDuration--;
+					if (mRemainingPrimeDuration <= 0) {
+						ClientModHandler.updateAbility(mPlayer, ClassAbility.HOLY_JAVELIN);
+						this.cancel();
+					}
+				}
+			};
+			mPrimeRunnable.runTaskTimer(mPlugin, 0, 1);
+			ClientModHandler.updateAbility(mPlayer, ClassAbility.HOLY_JAVELIN);
 			return true;
 		}
 		for (LivingEntity enemy : mobs) {
@@ -170,14 +210,14 @@ public class HolyJavelin extends Ability {
 			.addLine("will also deal *Divine Justice*'s damage").styles(UNDERLINED)
 			.addLine("to other mobs hit by the spear.")
 			.addLine()
-			.addStat("Damage: %d (s) (to non-Heretics)")
-				.statValues(stat(a -> a.mDamage, DAMAGE))
-			.addStat("Damage: %d (s) (to Heretics)")
-				.statValues(stat(a -> a.mHereticDamage, HERETIC_DAMAGE))
+			.addStat("Damage: %d1R (s) (to non-Heretics)")
+				.statValues(perRegion(a -> a.mDamage, DAMAGE_1[0], DAMAGE_1[1]))
+			.addStat("Damage: %d1R (s) (to Heretics)")
+				.statValues(perRegion(a -> a.mHereticDamage, HERETIC_DAMAGE_1[0], HERETIC_DAMAGE_1[1]))
 			.addStat("Effect: Fire for %t")
 				.statValues(stat(FIRE_DURATION))
-			.addStat("Range: %r1")
-				.statValues(stat(a -> a.mRange, RANGE_1))
+			.addStat("Range: %r")
+				.statValues(stat(a -> a.mRange, RANGE))
 			.addStat("Cooldown: %t1")
 				.statValues(cooldown(COOLDOWN_1))
 			.addDashedLine();
@@ -186,21 +226,39 @@ public class HolyJavelin extends Ability {
 	private static Description<HolyJavelin> getDescription2() {
 		return new FormattedDescriptionBuilder<>(() -> INFO, 2)
 			.addDashedLine()
-			.addLine("Increase *Holy Javelin*'s range and").styles(UNDERLINED)
+			.addLine("Increase *Holy Javelin*'s damage and").styles(UNDERLINED)
 			.addLine("reduce its cooldown.")
 			.addLine()
-			.addLine("If no mobs are hit by the spear, launch")
-			.addLine("yourself forwards with the spear instead.")
-			.addLine("(Can only launch once while midair)")
-			.addLine()
-			.addStatComparison("Range: %r1 -> %r2")
-				.statValues(
-					stat(RANGE_1),
-					stat(a -> a.mRange, RANGE_2))
+			.addStatComparison("Damage: %d1 -> %d2R (s) (to non-Heretics)")
+				.statValues(perRegion(DAMAGE_1[0], DAMAGE_1[1]),
+					perRegion(a -> a.mDamage, DAMAGE_2[0], DAMAGE_2[1]))
+			.addStatComparison("Damage: %d1 -> %d2R (s) (to Heretics)")
+				.statValues(perRegion(HERETIC_DAMAGE_1[0], HERETIC_DAMAGE_1[1]),
+					perRegion(a -> a.mHereticDamage, HERETIC_DAMAGE_2[0], HERETIC_DAMAGE_2[1]))
 			.addStatComparison("Cooldown: %t1 -> %t2")
 			.statValues(
 				cooldown(COOLDOWN_1),
 				cooldown(COOLDOWN_2))
+			.addLine()
+			.addLine("If no mobs are hit by the spear, launch")
+			.addLine("forwards with the spear instead, and prime")
+			.addLine("a buff to your next *Divine Justice*").styles(UNDERLINED)
+			.addLine("trigger within %t.")
+			.statValues(stat(a -> a.mInitialPrimeDuration, DIVINE_JUSTICE_BONUS_PRIME_DURATION))
+			.addLine("(Can only launch once while midair)")
+			.addLine()
+			.addStat("Damage Bonus: +%p (s)")
+				.statValues(stat(a -> a.mDJDamageBonus, DIVINE_JUSTICE_BONUS_DAMAGE))
 			.addDashedLine();
+	}
+
+	@Override
+	public int getInitialAbilityDuration() {
+		return mInitialPrimeDuration;
+	}
+
+	@Override
+	public int getRemainingAbilityDuration() {
+		return mRemainingPrimeDuration;
 	}
 }
